# meshr

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: collision.rs
bindings/python/: Cargo.toml
bindings/python/src/: geometry.rs  lib.rs
bindings/python/src/geometry/: vector3.rs
src/: geometry.rs  lib.rs  mesh.rs  spatial.rs
src/bindings/python/geometry/: vector3.rs
src/geometry/: aabb.rs  collision.rs  line.rs  ray.rs  sphere.rs  triangle.rs  vector3.rs
src/geometry/collision/: intersection.rs  intersects.rs
src/geometry/collision/archive/: intersects.rs
src/geometry/collision/archive/intersects/: aabb_aabb.rs  aabb_ray.rs  aabb_triangle.rs  aabb_vector3.rs  ray_sphere.rs  sphere_vector3.rs
src/geometry/collision/intersection/: line_triangle.rs  triangle_triangle.rs
src/geometry/collision/intersects/: aabb_aabb.rs  aabb_ray.rs  aabb_sphere.rs  aabb_triangle.rs  aabb_vector3.rs  ray_sphere.rs  ray_triangle.rs  sphere_sphere.rs  sphere_vector3.rs  triangle_triangle.rs
src/mesh/: half_edge.rs  polygon_soup.rs  wavefront.rs
src/spatial/: debug.rs  octree.rs
supply-chain/: config.toml
